2003-02-22  Dave Jones <davej@codemonkey.org.uk>

	* libop/op_events.c: segregload is utm_mask not utm_exclusive

2003-02-20  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/output_format.h:
	* pp/output_format.cpp:
	* pp/op_time.cpp:
	* pp/oprofpp.cpp:
	* pp/opp_symbol.h: better handling of 64/32 bits bfd_vma
	  in output

2003-02-20  John Levon  <levon@movementarian.org>

	* libutil++/op_exception.h:
	* libutil++/op_exception.cpp: throw() where needed

2003-02-19  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* daemon/opd_image.h:
	* daemon/opd_image.cpp:
	* daemon/opd_kernel.cpp: fix thinko with --separate=kernel resulting
	  in duplicate opening of the same samples file.

2003-02-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_exception.h:
	* libutil++/op_exception.cpp: new files, base class for exception.
	  Not used for now.

2003-02-19  John Levon  <levon@movementarian.org>

	* acinclude.m4: update from upstream

	* gui/ui/oprof_start.base.ui:
	* gui/oprof_start.cpp: separate --setup,--start.
	  Hide non-2.5 stuff in 2.5.

2003-02-18  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* dae/opd_sample_files.c:
	* daemon/opd_sample_files.c: opd_handle_old_sample_file() don't
	  try to delete old samples files if they don't exist.

2003-02-18  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol (do_options): Better option error checking.

2003-02-17  Will Cohen  <wcohen@redhat.com>

	* pp/format_output.h (show_help): namespace std.

2003-02-17  Will Cohen  <wcohen@redhat.com>

	* TODO: update.

2003-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	From Anton Blanchard :

	* daemon/opd_image.c: cookie_t fix for 64 bits

2003-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libopt++/popt_options.cpp:
	* libopt++/popt_options.h: handle an user specific additional
	  help string

	* pp/output_format.h:
	* pp/output_format.cpp:
	* pp/op_time_options.cpp:
	* pp/oprofpp_options.cpp: use it to show in --output_format