@@ -1,3 +1,12 @@
+2003-02-20  John Levon  <levon@movementarian.org>
+
+	* libop/op_interface_25.h:
+	* daemon/opd_kernel.c: implement module dropping
+
+	* daemon/opd_image.c:
+	* daemon/opd_kernel.c: attempt to make verbose logs
+	  less confusing
+
 2003-02-22  Dave Jones <davej@codemonkey.org.uk>
 
 	* libop/op_events.c: segregload is utm_mask not utm_exclusive
